@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 1998-2020  The R Core Team.
+ *  Copyright (C) 1998-2021  The R Core Team.
  *  Copyright (C) 1995-1998  Robert Gentleman and Ross Ihaka
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -352,7 +352,7 @@ SEXP attribute_hidden do_rep_int(SEXP call, SEXP op, SEXP args, SEXP rho)
 
     if (DispatchOrEval(call, op, "rep", args, rho, &a, 0, 0))
       return(a);
-    
+
     if (!isVector(ncopy))
 	error(_("invalid type (%s) for '%s' (must be a vector)"),
 	      type2char(TYPEOF(ncopy)), "times");
@@ -428,7 +428,7 @@ SEXP attribute_hidden do_rep_len(SEXP call, SEXP op, SEXP args, SEXP rho)
 	}
 	UNPROTECT(1);
     }
-    
+
     if (!isVector(s) && s != R_NilValue)
 	error(_("attempt to replicate non-vector"));
 
@@ -801,10 +801,8 @@ SEXP attribute_hidden do_rep(SEXP call, SEXP op, SEXP args, SEXP rho)
 SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
 {
     SEXP ans = R_NilValue /* -Wall */, from, to, by, len, along;
-    int nargs = length(args), lf;
-    Rboolean One = (nargs == 1);
     R_xlen_t i, lout = NA_INTEGER;
-    static SEXP do_seq_formals = NULL;
+    Rboolean One = (length(args) == 1); // *before* messing with args ..
 
     /* DispatchOrEval internal generic: seq.int */
     if (DispatchOrEval(call, op, "seq", args, rho, &ans, 0, 1))
@@ -814,6 +812,7 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
        We pretend this is
        seq(from, to, by, length.out, along.with, ...)
     */
+    static SEXP do_seq_formals = NULL;
     if (do_seq_formals == NULL)
 	do_seq_formals = allocFormalsList6(install("from"), install("to"),
 					   install("by"), install("length.out"),
@@ -828,9 +827,8 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
     Rboolean
 	miss_from = (from == R_MissingArg),
 	miss_to   = (to   == R_MissingArg);
-
     if(One && !miss_from) {
-	lf = length(from);
+	int lf = length(from);
 	if(lf == 1 && (TYPEOF(from) == INTSXP || TYPEOF(from) == REALSXP)) {
 	    double rfrom = asReal(from);
 	    if (!R_FINITE(rfrom))
@@ -860,7 +858,7 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
     }
 
     if(lout == NA_INTEGER) {
-	double rfrom, rto, rby = asReal(by);
+	double rfrom, rto;
 	if(miss_from) rfrom = 1.0;
 	else {
 	    if(length(from) != 1) errorcall(call, _("'%s' must be of length 1"), "from");
@@ -877,15 +875,20 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
 	}
 	if(by == R_MissingArg)
 	    ans = seq_colon(rfrom, rto, call);
-	else {
+	else { // 'by' specified
 	    if(length(by) != 1) errorcall(call, _("'%s' must be of length 1"), "by");
 	    double del = rto - rfrom;
 	    if(del == 0.0 && rto == 0.0) {
 		ans = to; // is *not* missing in this case
 		goto done;
 	    }
-	    /* printf("from = %f, to = %f, by = %f\n", rfrom, rto, rby); */
-	    double n = del/rby;
+	    double n, rby = asReal(by);
+	    Rboolean finite_del = R_FINITE(del);
+	    if(finite_del) {
+		n = del/rby;
+	    } else { // overflow in  (to - from)  when both are finite
+		n = rto/rby - rfrom/rby;
+	    }
 	    if(!R_FINITE(n)) {
 		if(del == 0.0 && rby == 0.0) {
 		    ans = miss_from ? ScalarReal(rfrom) : from;
@@ -893,8 +896,8 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
 		} else
 		    errorcall(call, _("invalid '(to - from)/by'"));
 	    }
-	    double dd = fabs(del)/fmax2(fabs(rto), fabs(rfrom));
-	    if(dd < 100 * DBL_EPSILON) {
+	    // inherited from seq.default() but "fudgy"
+	    if(finite_del && fabs(del)/fmax2(fabs(rto), fabs(rfrom)) < 100 * DBL_EPSILON) {
 		ans = miss_from ? ScalarReal(rfrom) : from;
 		goto done;
 	    }
@@ -909,8 +912,8 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
 
 	    R_xlen_t nn;
 	    if((miss_from || TYPEOF(from) == INTSXP) &&
-	       (miss_to   || TYPEOF(to)   == INTSXP) &&
-	       TYPEOF(by) == INTSXP) {
+	       (miss_to   || TYPEOF(to)   == INTSXP) && TYPEOF(by) == INTSXP)
+	    {
 		int *ia, ifrom = miss_from ? (int)rfrom : asInteger(from),
 		    iby = asInteger(by);
 		/* With the current limits on integers and FEPS
@@ -928,8 +931,15 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
 		nn = (int)(n + FEPS);
 		ans = allocVector(REALSXP, nn+1);
 		double *ra = REAL(ans);
-		for(i = 0; i <= nn; i++)
-		    ra[i] = rfrom + (double)i * rby;
+		if(finite_del)
+		    for(i = 0; i <= nn; i++)
+			ra[i] = rfrom + (double)i * rby;
+		else { // |from - to| is infinite, but n = (from-to)/by is not
+		    rfrom /= 4.;
+		    rby   /= 4.;
+		    for(i = 0; i <= nn; i++) // ldexp(Y, 2) := Y * 2^2 = 4 Y
+			ra[i] = ldexp(rfrom + (double)i * rby, 2);
+		}
 		/* Added in 2.9.0 */
 		if (nn > 0)
 		    if((rby > 0 && ra[nn] > rto) || (rby < 0 && ra[nn] < rto))
@@ -940,20 +950,27 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
 	ans = allocVector(INTSXP, 0);
     } else if (One) {
 	ans = seq_colon(1.0, (double)lout, call);
-    } else if (by == R_MissingArg) { // and  len := length.out  specified
+    } else if (by == R_MissingArg) { // and  len := length.out  specified, >= 1
 	double rfrom = asReal(from), rto = asReal(to), rby = 0; // -Wall
 	if(miss_to)   rto   = rfrom + (double)lout - 1;
 	if(miss_from) rfrom = rto   - (double)lout + 1;
 	if(!R_FINITE(rfrom)) errorcall(call, _("'%s' must be a finite number"), "from");
 	if(!R_FINITE(rto))   errorcall(call, _("'%s' must be a finite number"), "to");
-	if(lout > 2) rby = (rto - rfrom)/(double)(lout - 1);
+	Rboolean finite_del = 0;
+	if(lout > 2) { // only then, use 'by'
+	    double nint = (double)(lout - 1);
+	    if((finite_del = R_FINITE(rby = (rto - rfrom))))
+		rby /= nint;
+	    else // overflow in (to - from), nint >= 2  => finite 'by'
+		rby = (rto/nint - rfrom/nint);
+	}
 	if(rfrom <= INT_MAX && rfrom >= INT_MIN &&
 	   rto   <= INT_MAX && rto   >= INT_MIN &&
 	   rfrom == (int)rfrom &&
 	   (lout <= 1 || rto == (int)rto) &&
 	   (lout <= 2 || rby == (int)rby)) {
 	    ans = allocVector(INTSXP, lout);
-	    if(lout > 0) INTEGER(ans)[0] = (int)rfrom;
+	    INTEGER(ans)[0] = (int)rfrom;
 	    if(lout > 1) INTEGER(ans)[lout - 1] = (int)rto;
 	    if(lout > 2)
 		for(i = 1; i < lout-1; i++) {
@@ -961,16 +978,24 @@ SEXP attribute_hidden do_seq(SEXP call, SEXP op, SEXP args, SEXP rho)
 		    INTEGER(ans)[i] = (int)(rfrom + (double)i*rby);
 		}
 	} else {
-	ans = allocVector(REALSXP, lout);
-	if(lout > 0) REAL(ans)[0] = rfrom;
-	if(lout > 1) REAL(ans)[lout - 1] = rto;
-	if(lout > 2) {
-	    rby = (rto - rfrom)/(double)(lout - 1);
-	    for(i = 1; i < lout-1; i++) {
-//		if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
-		REAL(ans)[i] = rfrom + (double)i*rby;
+	    ans = allocVector(REALSXP, lout);
+	    REAL(ans)[0] = rfrom;
+	    if(lout > 1) REAL(ans)[lout - 1] = rto;
+	    if(lout > 2) {
+		if(finite_del)
+		    for(i = 1; i < lout-1; i++) {
+// 		        if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
+			REAL(ans)[i] = rfrom + (double)i*rby;
+		    }
+		else {  // del:=(from - to) is infinite, but n = del/by is not
+		    rfrom /= 4.; // or ldexp(*, -2) for speed
+		    rby   /= 4.;
+		    for(i = 1; i < lout-1; i++) {
+// 		        if ((i+1) % NINTERRUPT == 0) R_CheckUserInterrupt();
+			REAL(ans)[i] = ldexp(rfrom + (double)i*rby, 2); // ldexp(y,2) = y * 4
+		    }
+		}
 	    }
-	}
 	}
     } else if (miss_to) {
 	double rfrom = asReal(from), rby = asReal(by), rto;
